[package]
name = "NearAuction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
ndarray = "0.15.6"
chrono = "0.4"
uint = { version = "0.9.0", default-features = false }
itertools = "0.10.0"
near-sdk = "4.0.0"
near-contract-standards = "3.1.1"